[2021-02-03]
- Updated SQI

[2021-01-24]
- Added Thanatos Despero Mask
- Fixed critical rate with Katar
- Reworked Potion Pitcher Calculator
- Fixed Shield Chain and Shield Boomerang damage computation

[2020-12-21]
- Added Sppo Egg
- Added Rose Casquette
- Added Normal Pope Egg
- Added Sword Master Crown
- Added Campus Festival Hat
- Added Luxurious Wedding Veil
- Added Steal Calculator
- Added Drain Rate Calculator
- Added SP Cost Modifier Info
- Added Healing Item Calculator

[2020-10-26]
- Added Greater Agimat food
- Fixed Giant Shield refine bonus

[2020-10-24]
- Added Preschool Hat
- Added new Summer Event items
- Added Insectivorous Plant Hairpin
- Fixed Final Strike damage computation
- Fixed Book of Charms class restriction

[2020-10-03]
- Added Antonio's set
- Fixed Palace Guard refine bonus
- Added HJ and EQ skills to Lost Dragon
- Fixed Tarou + Clamp cards combo applying twice
- Added magical attack modifiers to Extended Info - Attack Modifiers

[2020-10-01]
- Added Bankruptcy set
- Added Lost Dragon MvP
- Added Summer Cocktails
- Fixed Savage pet bonus
- Fixed Scuba Mask script
- Fixed weapon and base attack bonus based
- Fixed Apple of Idun & Berserk MaxHP formula
- Fixed Assassin Cross of Sunset song ASDP formula

[2020-07-20]
- Fixed Bragi formula
- Fixed MDEF armor enchantment
- Fixed Magmaring critical bonus
- Added Beach Towel, Cookie Hat and Black Tailed Ribbon
- Fixed Valorous Carnage Katar Sonic Blow damage bonus when linked

[2020-07-05]
- Fixed Health Point computation
- Fixed Triple Attack damage computation

[2020-07-04]
- Added Ancient Tower monsters
- Fixed The Ring of Nibelugen damage formula

[2020-06-21]
- Fixed AR/FAR ASPD party buff
- Fixed Eddga behaviour with MDEF
- Added new Elysian Garden monsters
- Shield Chain now take into consideration class defense bypass

[2020-05-29]
- Fixed Spiral Pierce damage computation

[2020-05-28]
- Form validation upon save action
- Fixed Sting Hat script
- Fixed Wood Goblin refine bonus damage