@@ -38,13 +38,15 @@
 		<span><b>2021-02-03</b></span>
 		<div id="changelog20210203">
 			<ul>
-				<li>Updated SQI</li>
-				<li>Added Thanatos Despero Mask</li>
+				<li>Updated SQI post revamp</li>
 				<li>Fixed critical rate with Katar</li>
+				<li>Added SQI Instances' monsters</li>
 				<li>Reworked Potion Pitcher Calculator</li>
+				<li>Fixed Asura Strike damage computation</li>
+				<li>Added Thanatos Despero Mask, Skull Cap items</li>
 				<li>Fixed Shield Chain and Shield Boomerang damage computation</li>
 			</ul>
-		</div>
+		</div><br>
 		<span><b>2020-12-21</b></span>
 		<div id="changelog20201221">
 			<ul>
