@@ -922,6 +922,63 @@ MonsterOBJ = [
 ,[803,"Skelion",6,72,1,98,50000,85,70,75,130,255,806,1209,80,80,42000,31000,,0,0,2789] // FIXME: Wrong MobID
 ,[804,"Lucia",7,81,1,99,15000000,25,180,200,199,255,3481,6706,60,60,0,0,,1,1,3855]
 ,[805,"Lost Dragon",9,73,2,105,1008920,30,81,122,98,61,2050,3080,12,30,70000,70000,,1,0,2131]
+// [Custom TalonRO - 2021-02-02 SQI Intances - Vanaheim]
+,[806,'Projection',3,83,0,98,1000000,0,0,0,150,0,1,2,25,45,0,0,,0,0,27250]
+,[807,'Security Droid',0,2,1,85,17800,24,26,5,82,30,1200,1800,30,20,0,0,,0,0,27251]
+,[808,'Self Destruct Droid',0,4,0,98,50000,75,0,0,0,0,1,2,90,90,0,0,,0,0,27252]
+,[809,'161-161 Colossal',0,83,2,99,480700,30,50,140,160,150,4000,8000,50,54,200000,100000,,0,0,27253]
+,[810,'Recon Droid',0,2,1,70,8900,24,26,5,82,30,800,1400,30,20,0,0,,0,0,27254]
+,[811,'Flame Droid',0,32,1,85,17800,24,26,5,82,30,800,1400,30,20,0,0,,0,0,27255]
+,[812,'Repair Droid',0,62,1,90,26700,24,26,5,82,30,400,700,30,20,0,0,,0,0,27256]
+,[813,'Executioner Droid',0,72,1,98,44500,24,26,5,82,30,1200,1800,30,20,0,0,,0,0,27257]
+,[814,'Pillar',0,1,2,98,500000,20,1,1,1,1,1,2,40,40,0,0,,0,0,27258]
+,[815,'Vanir Artillery',7,1,2,72,32000,35,65,75,80,15,1571,1771,15,5,19618,16639,,0,1,27260]
+,[816,'Vanir Sniper',7,1,2,67,36000,30,46,35,82,40,828,1233,25,60,23618,21639,,0,1,27261]
+,[817,'Vanir Spellblade',7,32,2,88,50000,30,127,92,151,120,2182,3082,38,39,40000,30000,,0,0,27262]
+,[818,'Vanir Spellblade',7,12,2,88,50000,30,127,92,151,120,2182,3082,38,39,40000,30000,,0,0,27263]
+,[819,'Vanir Spellblade',7,54,2,88,50000,30,127,92,151,120,2182,3082,38,39,40000,30000,,0,0,27264]
+,[820,'Vanir Spellblade',7,72,2,88,50000,30,127,92,151,120,2182,3082,38,39,40000,30000,,0,0,27265]
+,[821,'Vanir Spellblade',7,62,2,88,50000,30,127,92,151,120,2182,3082,38,39,40000,30000,,0,0,27266]
+,[822,'Jotun Berserker',2,2,2,72,70000,60,90,35,125,65,1340,1590,30,25,51480,10725,,0,0,27267]
+,[823,'Jotun Titan',2,2,2,86,90000,90,48,98,110,85,5733,6073,52,43,46666,32000,,0,0,27268]
+,[824,'Vanir Sorcerer',8,61,1,98,75000,30,89,223,128,93,497,2094,10,58,18000,29000,,0,0,27269]
+,[825,'Constant',0,73,0,55,30000,26,28,47,66,14,460,580,50,70,3230,116,,0,0,27272]
+,[826,'High Sorcerer Tyra',8,62,2,98,1250000,25,89,203,125,75,1797,3394,30,70,600000,300000,,1,0,27273]
+,[827,'Mystic Knight Einar',7,4,3,98,1250000,40,125,125,150,175,5340,8590,55,50,600000,300000,,1,0,27274]
+,[828,'Darkrah',6,72,3,98,1250000,50,90,95,125,25,3410,4712,60,25,600000,300000,,1,0,27275]
+,[829,'Nokrah Shadow',6,94,2,77,103631,40,100,100,97,40,1300,1983,64,70,0,0,,0,0,27276]
+,[830,'Nokrah',7,81,1,99,2800000,30,50,150,220,30,6000,11000,50,50,1500000,100000,,1,0,27277]
+,[831,'Crystal',0,4,2,98,1,0,0,0,0,0,1,2,100,99,0,0,,0,0,27278]
+,[832,'Haldur',7,81,1,99,5000000,40,89,183,180,93,5000,7000,50,65,2000000,750000,,1,0,27279]
+,[833,'Super Nova',6,94,2,98,200000,40,100,100,97,40,1300,1983,64,70,0,0,,0,0,27280]
+,[834,'Rosalind Ashe',7,41,1,98,3247412,40,125,175,200,50,6000,10000,30,45,1500000,500000,,1,0,27281]
+,[835,'Thorn of Confusion',6,74,0,89,300000,150,35,180,125,30,1,1,44,66,0,0,,0,1,27283]
+,[836,'Thorn of Curse',6,84,0,89,300000,150,35,180,125,30,1,1,44,66,0,0,,0,1,27284]
+,[837,'Thorn of Slumber',6,74,0,89,300000,150,35,180,125,30,1,1,44,66,0,0,,0,1,27285]
+,[838,'Thorn of Stun',6,74,0,89,300000,150,35,180,125,30,1,1,44,66,0,0,,0,1,27286]
+,[839,'Pandora Box',0,3,2,60,8080,30,100,40,150,110,530,1697,20,40,5215,3214,,0,0,27287]
+,[840,'Knight of Despair',1,74,2,92,80315,60,55,70,96,37,2800,2822,18,30,27527,33468,,0,0,27288]
+,[841,'Guard of Chaos',1,91,2,93,84740,35,142,81,75,32,2400,2500,21,8,37217,23474,,0,0,27289]
+,[842,'Chaotic Zealot',1,72,1,85,63632,46,87,33,81,27,2667,2805,16,12,28126,21879,,0,0,27290]
+,[843,'Archer of Anguish',1,72,1,86,47748,25,24,15,126,30,3391,3558,12,26,22715,15298,,0,1,27291]
+,[844,'Alpha Zombie',1,72,1,85,53632,46,87,33,81,27,2667,2805,16,12,27298,30619,,0,0,27292]
+,[845,'Skogul Redeemer',6,73,1,70,57544,70,69,50,67,52,1110,1930,20,15,31371,12789,,0,0,27293]
+,[846,'Frus Avenger',6,73,1,69,43422,60,69,50,76,52,1110,1780,20,15,19271,15615,,0,0,27294]
+,[847,'Chaotic Aristocrat',6,3,2,75,40746,80,25,95,95,55,1252,1610,65,25,17687,12891,,0,0,27295]
+,[848,'Lord of Despair',6,3,2,75,40746,80,25,95,95,55,1252,1610,65,25,17687,12891,,0,0,27296]
+,[849,'Worst Nightmare',6,73,2,78,22605,55,76,60,76,54,757,1007,37,37,9916,6917,,0,0,27297]
+,[850,'Enforcer of Chaos',6,71,2,99,1250000,30,142,150,156,70,3000,4300,20,35,200000,300000,,1,0,27298]
+,[851,'Enforcer of Despair',1,94,1,99,1250000,40,100,120,170,160,3560,4440,25,42,250000,400000,,1,0,27299]
+,[852,'The Consolidated',7,52,1,99,1250000,35,142,118,120,95,4480,4516,35,70,300000,500000,,1,0,27300]
+,[853,'Haldur',7,81,1,99,100000,20,89,45,220,93,1000,1400,50,65,0,0,,0,0,27301]
+,[854,'Creeper',3,21,1,70,75,1,1,1,1,1,1,1,99,99,0,0,,0,0,27302]
+,[855,'Serena Wolf',7,42,2,98,1250000,52,180,75,200,100,2400,5900,25,40,600000,300000,,1,1,27304]
+,[856,'Darkrah Loyalist',6,92,1,70,18412,50,120,120,100,75,1429,1912,33,33,11578,8192,,0,0,27305]
+,[857,'Chaotic Elder',6,3,2,75,26623,40,45,75,79,88,715,910,27,49,8217,3974,,0,0,27306]
+,[858,'Maintenance Cleaner',0,42,1,85,39000,45,76,57,125,50,1900,2700,20,53,31000,21000,,0,0,27307]
+,[859,'Maintenance Cleaner',0,13,1,85,39000,55,76,67,100,30,1500,2100,42,42,31000,21000,,0,1,27308]
+,[860,'Maintenance Cleaner',0,62,1,85,39000,30,56,145,120,30,1200,1500,53,30,31000,21000,,0,0,27309]
+,[861,'Maintenance Cleaner',4,4,0,85,26000,70,125,55,75,70,850,1150,35,35,16000,19000,,0,0,27310]
 ];
 
 //[id, "name",race,element,size,lvl,hp,vit,agi,int,dex,luk,minatk,maxatk,def,mdef,baseexp@1x_rate,jobexp@1x_rate,,1 boss/0 non-boss,1 range/0 melee, monster ID]
@@ -953,7 +1010,7 @@ var tiiki = ["All Regions","Seals","GMC","Abyss Lake Dungeon","Amatsu","Ancient 
 "Guild Dungeon [Schwartzvald]","Hidden Temple","Hugel Fields","Ice Cave","Juperos Dungeon","Kiel Dungeon","Lighthalzen Fields",
 "Louyang","Lutie & Toy Factory","Magma Dungeon","Malangdo","Malangdo Culvert","Manuk","Morroc Fields","Moscovia","Mt. Mjolnir","Nameless Island","Nidhoggr's Nest",
 "Niflheim","Odins Shrine","Old Glast Heim","Orc Dungeon","Payon Dungeon","Payon Fields","Poring Island","Port Malaya Instance","Prontera Fields","Pyramid","Pyramid [Nightmare]","Rachel Fields",
-"Rachel Sanctuary","Scaraba Hole","Sphinx","Splendide","Sunken Ship","Thanatos Tower","Thors Volcano","Turtle Island","Umbala Dungeon",
+"Rachel Sanctuary","Scaraba Hole","Sphinx","Splendide","SQI Instances","Sunken Ship","Thanatos Tower","Thors Volcano","Turtle Island","Umbala Dungeon",
 "Umbala Fields","Valkyries' Realm","Veins Fields","War of Emperium","Yuno Fields"];
 
 if(Taijin==0){
@@ -962,85 +1019,86 @@ if(Taijin==0){
 }
 
 MonMap = [
-[0], // All Regions
-[623,624,625,627,628,629,622,626,630,620,621,619,"N"], // Seals
-[631,678,632,633,634,635,636,637,638,639,640,641,642,643,644,645,"N"], // GMC
-[265,298,401,402,405,406,407,408,409,410,411,412,"N"], // Abyss Lake Dungeon
-[21,53,61,70,73,74,124,140,239,241,271,274,299,"N"], // Amatsu
-[228,450,717,718,719,720,721,722,723,725,726,727,728,731,732,733,734,735,735,736,737,738,739,740,741,748,776,777,778,779,780,781,782,783,784,785,786,787,788,789,790,791,792,793,794,795,"N"], // Ancient Tower
-[5,14,18,67,191,236,237,244,281,282,"N"], // Ant Hell
-[26,30,85,103,161,235,307,342,344,345,428,"N"], // Ayothaya
-[573,574,575,576,"N"], // BG
-[60,71,86,157,166,192,226,230,241,248,254,284,285,286,287,571,578,579,580,581,"N"], // Bibilan,Byalan
-[357,358,359,360,,362,363,364,365,366,367,368,369,370,371,497,498,499,500,501,502,372,373,374,375,380,381,604,605,606,607,608,609,610,611,612,613,614,615,616,617,"N"], // LHZ
-[526,529,565,566,567,568,569,"N"], // Bitfrost
-[241,284,254,591,592,577,86,"N"], // Brasilis
-[5,8,11,26,35,39,46,47,48,49,90,100,141,204,213,218,221,231,257,265,291,298,309,355,"N"], // Clock Tower
-[67,90,148,213,277,292,350,353,430,465,"N"], // Coal Mine
-[132,152,178,217,230,241,264,303,304,306,343,"N"], // Comodo Caves
-[7,8,12,58,59,62,71,72,75,96,113,119,121,122,127,131,133,153,155,185,203,214,219,240,258,264,267,269,271,300,317,321,"N"], // Comodo Fields
-[45,90,160,179,199,200,201,202,213,244,254,267,"N"], // Culverts
-[549,553,554,551,550,552,"N"], // Dewata
-[14,18,106,149,150,152,191,214,236,238,305,308,491,492,493,494,495,496,"N"], // Dimensional Crack
-[692,693,694,695,696,697,698,699,700,"N"], // Eclage
-[347,348,349,350,351,352,353,354,355,356,"N"], // Einbroch Dungeon
-[67,82,92,105,136,179,187,199,202,211,214,219,231,252,261,271,272,273,307,323,346,347,351,352,354,376,377,"N"], // Einbroch Fields
-[718,719,720,721,722,723,724,725,726,727,728,729,730,732,733,734,735,736,737,738,739,740,741,742,743,744,745,747,748,749,750,751,752,753,754,755,756,757,758,759,760,761,762,763,764,765,766,767,768,769,770,771,772,773,774,775,776,"N"], // Elysian Garden
-[528,530,531,555,541,"N"], // El Dicastes
-[505,506,507,508,509,510,"N"], // Endless Tower Finale
-[23,25,35,48,66,123,144,193,247,253,291,296,"N"], // Geffenia
-[26,48,85,139,170,193,206,207,213,215,216,244,267,271,283,396,458,"N"], // Geffen Dungeon
-[19,49,50,54,55,56,92,103,106,108,109,110,111,112,113,115,116,117,118,119,120,127,153,161,177,183,184,203,221,242,250,252,267,271,272,289,307,319,321,323,429,"N"], // Geffen Fields
-[13,22,24,26,28,46,47,48,62,66,79,83,85,90,129,142,144,147,163,170,171,173,174,175,232,249,253,283,291,298,309,310,312,313,314,323,"N"], // Glast Heim
-[5,8,26,62,90,107,154,213,297,"N"], // Glast Heim Dungeons
-[101,102,145,180,182,197,198,227,271,318,"N"], // Gonryun
-[15,16,43,46,47,84,137,138,206,215,289,"N"], // Guild Dungeon [Aldebaran]
-[460,478,518,519,520,521,522,"N"], // Guild Dungeon [Arunafeltz]
-[83,85,104,172,173,175,190,193,296,"N"], // Guild Dungeon [Geffen]
-[1,10,33,38,69,81,126,135,169,205,239,274,"N"], // Guild Dungeon [Payon]
-[5,80,92,93,97,125,127,281,282,315,"N"], // Guild Dungeon [Prontera]
-[9,514,515,516,517,518,"N"], // Guild Dungeon [Schwartzvald]
-[15,16,33,37,82,83,84,92,103,104,122,125,126,127,151,153,158,161,177,183,184,208,211,214,228,229,232,239,242,252,268,271,272,273,277,279,289,307,311,315,320,513,"N"], // Hidden Temple
-[82,136,162,187,194,195,199,250,251,271,272,300,346,376,377,401,402,403,404,409,423,424,425,426,427,"N"], // Hugel Fields
-[446,449,451,452,453,454,455,456,"N"], // Ice Cave
-[9,382,383,384,385,386,387,388,389,390,391,392,393,394,395,"N"], // Juperos Dungeon
-[13,323,430,431,432,433,434,435,"N"], // Kiel Dungeon
-[82,155,273,346,376,377,379,400,"N"], // Lighthalzen Fields
-[7,82,95,122,125,239,274,289,298,302,315,334,335,336,337,338,398,399,"N"], // Louyang
-[41,87,88,98,125,130,156,181,214,225,271,272,278,279,293,339,"N"], // Lutie & Toy Factory
-[36,77,95,186,194,195,216,259,308,341,"N"], // Magma Dungeon
-[72,651,240,652,653,654,655,656,657,658,659,660,661,649,59,570,650,646,647,648,571,572,662,"N"], // Malangdo
-[701,702,703,704,705,706,707,708,709,710,711,712,713,714,715,716,"N"], // Malangdo Culvert
-[524,527,528,530,531,534,541,"N"], // Manuk
-[7,14,18,106,121,122,131,149,150,153,158,184,188,189,191,209,214,223,232,236,238,256,258,262,263,269,272,301,305,"N"], // Morroc Fields
-[485,486,487,488,489,490,"N"], // Moscovia
-[15,16,19,33,82,92,103,138,151,155,177,200,201,250,251,261,267,270,271,273,289,290,294,"N"], // Mt. Mjolnir
-[85,473,474,475,476,477,478,479,480,482,"N"], // Nameless Island
-[535,536,537,538,539,540,542,543,544,545,546,"N"], // Nidhoggr's Nest
-[324,325,326,327,328,329,330,331,332,"N"], // Niflheim
-[404,423,424,425,426,427,436,437,438,439,440,481,511,512,"N"], // Odins Shrine
-[679,680,681,682,683,684,685,686,687,688,689,690,691,"N"], // Old Glast Heim
-[49,51,52,,153,164,213,244,"N"], // Orc Dungeon
-[1,10,26,31,34,81,83,89,135,146,167,169,170,205,213,241,244,271,275,290,302,337,"N"], // Payon Dungeon
-[27,33,34,38,40,89,92,126,158,160,161,196,201,205,208,239,252,267,271,272,311,322,"N"], // Payon Fields
-[41,83,104,130,193,214,271,272,278,279,340,"N"], // Poring Island
-[671,672,673,674,675,676,677,"N"], // Port Malaya Instance
-[37,92,108,109,110,111,112,113,114,127,128,161,183,199,202,214,233,242,252,268,271,272,290,307,311,320,"N"], // Prontera Fields
-[1,5,20,42,57,66,169,213,244,266,271,276,280,297,298,333,484,"N"], // Pyramid
-[664,665,666,667,668,669,670,"N"], // Nightmare Pyramid
-[96,136,214,219,271,323,346,376,379,445,446,447,448,449,450,"N"], // Rachel Fields
-[396,397,457,458,459,460,461,462,463,"N"], // Rachel Sanctuary
-[556,557,558,559,560,561,562,563,564,582,583,584,585,586,587,588,589,590,"N"], // Scaraba Hole
-[122,165,213,224,245,276,288,297,298,316,484,"N"], // Sphinx
-[525,526,529,532,533,"N"], // Splendide
-[26,83,86,104,129,190,212,222,241,265,267,283,298,"N"], // Sunken Ship
-[13,39,46,47,298,309,412,413,414,415,416,417,418,419,420,421,422,423,424,425,426,427,"N"], // Thanatos Tower
-[341,464,465,466,467,468,469,470,471,472,"N"], // Thors Volcano
-[6,129,159,168,176,178,208,220,234,255,264,"N"], // Turtle Island
-[29,30,32,210,211,260,"N"], // Umbala Dungeon
-[12,29,30,96,103,155,177,183,208,210,219,235,246,261,273,307,"N"], // Umabala Fields
-Array.from({ length: 759 + 1 - 717}, (_, k) => 717 + k).concat(Array.from({ length: 796 + 1 - 776}, (_, k) => 776 + k)), // Valkyries' Realm
-[59,122,127,131,162,188,214,240,301,317,445,446,447,448,449,450,464,"N"], // Veins Fields
-[63,64,65,503,504,44,547,548,"N"], // War of Emperium
+[0],// All Regions
+[623,624,625,627,628,629,622,626,630,620,621,619,"N"],// Seals
+[631,678,632,633,634,635,636,637,638,639,640,641,642,643,644,645,"N"],// GMC
+[265,298,401,402,405,406,407,408,409,410,411,412,"N"],// Abyss Lake Dungeon
+[21,53,61,70,73,74,124,140,239,241,271,274,299,"N"],// Amatsu
+[228,450,717,718,719,720,721,722,723,725,726,727,728,731,732,733,734,735,735,736,737,738,739,740,741,748,776,777,778,779,780,781,782,783,784,785,786,787,788,789,790,791,792,793,794,795,"N"],// Ancient Tower
+[5,14,18,67,191,236,237,244,281,282,"N"],// Ant Hell
+[26,30,85,103,161,235,307,342,344,345,428,"N"],// Ayothaya
+[573,574,575,576,"N"],// BG
+[60,71,86,157,166,192,226,230,241,248,254,284,285,286,287,571,578,579,580,581,"N"],// Bibilan,Byalan
+[357,358,359,360,,362,363,364,365,366,367,368,369,370,371,497,498,499,500,501,502,372,373,374,375,380,381,604,605,606,607,608,609,610,611,612,613,614,615,616,617,"N"],// LHZ
+[526,529,565,566,567,568,569,"N"],// Bitfrost
+[241,284,254,591,592,577,86,"N"],// Brasilis
+[5,8,11,26,35,39,46,47,48,49,90,100,141,204,213,218,221,231,257,265,291,298,309,355,"N"],// Clock Tower
+[67,90,148,213,277,292,350,353,430,465,"N"],// Coal Mine
+[132,152,178,217,230,241,264,303,304,306,343,"N"],// Comodo Caves
+[7,8,12,58,59,62,71,72,75,96,113,119,121,122,127,131,133,153,155,185,203,214,219,240,258,264,267,269,271,300,317,321,"N"],// Comodo Fields
+[45,90,160,179,199,200,201,202,213,244,254,267,"N"],// Culverts
+[549,553,554,551,550,552,"N"],// Dewata
+[14,18,106,149,150,152,191,214,236,238,305,308,491,492,493,494,495,496,"N"],// Dimensional Crack
+[692,693,694,695,696,697,698,699,700,"N"],// Eclage
+[347,348,349,350,351,352,353,354,355,356,"N"],// Einbroch Dungeon
+[67,82,92,105,136,179,187,199,202,211,214,219,231,252,261,271,272,273,307,323,346,347,351,352,354,376,377,"N"],// Einbroch Fields
+[718,719,720,721,722,723,724,725,726,727,728,729,730,732,733,734,735,736,737,738,739,740,741,742,743,744,745,747,748,749,750,751,752,753,754,755,756,757,758,759,760,761,762,763,764,765,766,767,768,769,770,771,772,773,774,775,776,"N"],// Elysian Garden
+[528,530,531,555,541,"N"],// El Dicastes
+[505,506,507,508,509,510,"N"],// Endless Tower Finale
+[23,25,35,48,66,123,144,193,247,253,291,296,"N"],// Geffenia
+[26,48,85,139,170,193,206,207,213,215,216,244,267,271,283,396,458,"N"],// Geffen Dungeon
+[19,49,50,54,55,56,92,103,106,108,109,110,111,112,113,115,116,117,118,119,120,127,153,161,177,183,184,203,221,242,250,252,267,271,272,289,307,319,321,323,429,"N"],// Geffen Fields
+[13,22,24,26,28,46,47,48,62,66,79,83,85,90,129,142,144,147,163,170,171,173,174,175,232,249,253,283,291,298,309,310,312,313,314,323,"N"],// Glast Heim
+[5,8,26,62,90,107,154,213,297,"N"],// Glast Heim Dungeons
+[101,102,145,180,182,197,198,227,271,318,"N"],// Gonryun
+[15,16,43,46,47,84,137,138,206,215,289,"N"],// Guild Dungeon [Aldebaran]
+[460,478,518,519,520,521,522,"N"],// Guild Dungeon [Arunafeltz]
+[83,85,104,172,173,175,190,193,296,"N"],// Guild Dungeon [Geffen]
+[1,10,33,38,69,81,126,135,169,205,239,274,"N"],// Guild Dungeon [Payon]
+[5,80,92,93,97,125,127,281,282,315,"N"],// Guild Dungeon [Prontera]
+[9,514,515,516,517,518,"N"],// Guild Dungeon [Schwartzvald]
+[15,16,33,37,82,83,84,92,103,104,122,125,126,127,151,153,158,161,177,183,184,208,211,214,228,229,232,239,242,252,268,271,272,273,277,279,289,307,311,315,320,513,"N"],// Hidden Temple
+[82,136,162,187,194,195,199,250,251,271,272,300,346,376,377,401,402,403,404,409,423,424,425,426,427,"N"],// Hugel Fields
+[446,449,451,452,453,454,455,456,"N"],// Ice Cave
+[9,382,383,384,385,386,387,388,389,390,391,392,393,394,395,"N"],// Juperos Dungeon
+[13,323,430,431,432,433,434,435,"N"],// Kiel Dungeon
+[82,155,273,346,376,377,379,400,"N"],// Lighthalzen Fields
+[7,82,95,122,125,239,274,289,298,302,315,334,335,336,337,338,398,399,"N"],// Louyang
+[41,87,88,98,125,130,156,181,214,225,271,272,278,279,293,339,"N"],// Lutie & Toy Factory
+[36,77,95,186,194,195,216,259,308,341,"N"],// Magma Dungeon
+[72,651,240,652,653,654,655,656,657,658,659,660,661,649,59,570,650,646,647,648,571,572,662,"N"],// Malangdo
+[701,702,703,704,705,706,707,708,709,710,711,712,713,714,715,716,"N"],// Malangdo Culvert
+[524,527,528,530,531,534,541,"N"],// Manuk
+[7,14,18,106,121,122,131,149,150,153,158,184,188,189,191,209,214,223,232,236,238,256,258,262,263,269,272,301,305,"N"],// Morroc Fields
+[485,486,487,488,489,490,"N"],// Moscovia
+[15,16,19,33,82,92,103,138,151,155,177,200,201,250,251,261,267,270,271,273,289,290,294,"N"],// Mt. Mjolnir
+[85,473,474,475,476,477,478,479,480,482,"N"],// Nameless Island
+[535,536,537,538,539,540,542,543,544,545,546,"N"],// Nidhoggr's Nest
+[324,325,326,327,328,329,330,331,332,"N"],// Niflheim
+[404,423,424,425,426,427,436,437,438,439,440,481,511,512,"N"],// Odins Shrine
+[679,680,681,682,683,684,685,686,687,688,689,690,691,"N"],// Old Glast Heim
+[49,51,52,,153,164,213,244,"N"],// Orc Dungeon
+[1,10,26,31,34,81,83,89,135,146,167,169,170,205,213,241,244,271,275,290,302,337,"N"],// Payon Dungeon
+[27,33,34,38,40,89,92,126,158,160,161,196,201,205,208,239,252,267,271,272,311,322,"N"],// Payon Fields
+[41,83,104,130,193,214,271,272,278,279,340,"N"],// Poring Island
+[671,672,673,674,675,676,677,"N"],// Port Malaya Instance
+[37,92,108,109,110,111,112,113,114,127,128,161,183,199,202,214,233,242,252,268,271,272,290,307,311,320,"N"],// Prontera Fields
+[1,5,20,42,57,66,169,213,244,266,271,276,280,297,298,333,484,"N"],// Pyramid
+[664,665,666,667,668,669,670,"N"],// Nightmare Pyramid
+[96,136,214,219,271,323,346,376,379,445,446,447,448,449,450,"N"],// Rachel Fields
+[396,397,457,458,459,460,461,462,463,"N"],// Rachel Sanctuary
+[556,557,558,559,560,561,562,563,564,582,583,584,585,586,587,588,589,590,"N"],// Scaraba Hole
+[122,165,213,224,245,276,288,297,298,316,484,"N"],// Sphinx
+[525,526,529,532,533,"N"],// Splendide
+Array.from({ length: 861 + 1 - 806},(_,k) => 806 + k),// SQI Instances
+[26,83,86,104,129,190,212,222,241,265,267,283,298,"N"],// Sunken Ship
+[13,39,46,47,298,309,412,413,414,415,416,417,418,419,420,421,422,423,424,425,426,427,"N"],// Thanatos Tower
+[341,464,465,466,467,468,469,470,471,472,"N"],// Thors Volcano
+[6,129,159,168,176,178,208,220,234,255,264,"N"],// Turtle Island
+[29,30,32,210,211,260,"N"],// Umbala Dungeon
+[12,29,30,96,103,155,177,183,208,210,219,235,246,261,273,307,"N"],// Umabala Fields
+Array.from({ length: 759 + 1 - 717},(_,k) => 717 + k).concat(Array.from({ length: 796 + 1 - 776},(_,k) => 776 + k)),// Valkyries' Realm
+[59,122,127,131,162,188,214,240,301,317,445,446,447,448,449,450,464,"N"],// Veins Fields
+[63,64,65,503,504,44,547,548,"N"],// War of Emperium
 [0,41,87,91,92,98,105,121,122,130,134,136,151,162,177,187,193,211,214,219,232,235,252,271,272,273,278,279,293,323,340,400,401,402,"N"] // Yuno Fields
 ];
